# rusty-engine

./: Cargo.toml
docs/: main.md
src/: app.rs  camera.rs  controller.rs  gui.rs  instance.rs  light.rs  light.wgsl  main.rs  model.rs  renderable.rs  resources.rs  shader.wgsl  shapes.rs  state.rs  texture.rs  uniforms.rs  vertex.rs
src/renderer_backend/: mod.rs  pipeline_builder.rs
src/shaders/: shader.wgsl
