[package]
name = "app-rusty-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
bytemuck = {version="1.13", features = ["derive"]}
cgmath = "0.18"
egui = "0.32.*"
egui-wgpu = "0.32.*"
egui-winit = "0.32.*"
glam = "0.27"
image = "0.24"
instant = "0.1"
winit = "0.30"
env_logger = "0.11"
log = "0.4"
tobj = { version = "3.2", default-features = false, features = ["async"]}
wgpu = "25.0.2"
pollster = "0.3"

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"

